infrastructure/01-system/vault/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
